--- a/views/contract.ejs
+++ b/views/contract.ejs
@@ -29,29 +29,42 @@
         }
 
         button {
-            padding-top: 5px;
-            padding-left: 5px;
-            padding-bottom: 5px;
-            padding-right: 5px;
+            padding: 8px;
             position: relative;
             vertical-align: top;
             color: white;
-            text-align: center;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-            border: 0;
-            /* background: #c0392b; */
-            background: #00551f;
-            border-bottom: 2px solid #002e08/*#b53224*/;
             cursor: pointer;
-            -webkit-box-shadow: inset 0 -2px #002e08/*#b53224*/;
-            box-shadow: inset 0 -2px #002e08/*#b53224*/;
+            text-align: center;
             font-weight: bold;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+            background: #00551f;
+            /* background: #c0392b; */
+
+            border: 0;
+            border-radius: 6px;
+            border-bottom: 4px solid #002e08/*#b53224*/;
+
+            box-shadow: inset 0 -2px #002e08/*#b53224*/;
+            -webkit-box-shadow: inset 0 -2px #002e08/*#b53224*/;
+            -moz-box-shadow: inset 0 -2px #002e08/*#b53224*/;
+
+            transition: all 0.05s linear;
+            -webkit-transition: all 0.05s linear;
+            -moz-transition: all 0.05s linear;
         }
         button:active {
-            top: 1px;
+            top: 2px;
+            -webkit-top: 2px;
             outline: none;
-            -webkit-box-shadow: none;
+            -webkit-outline: none;
             box-shadow: none;
+            -webkit-box-shadow: none;
+            border-bottom: 3px solid #002e08;
+            -webkit-border-bottom: 3px solid #002e08;
+        }
+        button:disabled {
+            cursor: not-allowed;
+            opacity: 60%;
         }
     </style>
 </head>
@@ -114,6 +127,13 @@
             }
             acceptButton.innerText += "ACCEPT";
             el.append(acceptButton);
+            
+            if (localStorage.getItem("username") == CONTRACT_JSON.sender && CONTRACT_JSON.sAccepted) {
+                acceptButton.disabled = true;
+            }
+            else if (localStorage.getItem("username") == CONTRACT_JSON.receiver && CONTRACT_JSON.rAccepted) {
+                acceptButton.disabled = true;
+            }
 
             return el;
         }
