--- a/views/contract.ejs
+++ b/views/contract.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script>
         const CONTRACT_ID = "<%= contractId %>";
-        const CONTRACT_JSON = JSON.parse('<%= contractJson %>'.replaceAll("&#34;", '"'));
+        const CONTRACT_JSON = JSON.parse(CONTRACT_ID.replaceAll("&#34;", '"'));
     </script>
     <title>Wogtracts</title>
 
@@ -48,9 +48,9 @@
             -webkit-box-shadow: inset 0 -2px #002e08/*#b53224*/;
             -moz-box-shadow: inset 0 -2px #002e08/*#b53224*/;
 
-            transition: all 0.05s linear;
-            -webkit-transition: all 0.05s linear;
-            -moz-transition: all 0.05s linear;
+            transition: all 0.2s linear;
+            -webkit-transition: all 0.2s linear;
+            -moz-transition: all 0.2s linear;
         }
         button:active {
             top: 2px;
@@ -69,9 +69,10 @@
     </style>
 </head>
 <body>
+    <!-- The JS required to render the elements on the screen -->
     <script>
-        if (localStorage.getItem("username") == null) {
-            localStorage.setItem("username", prompt("Enter Your Username"));
+        if (localStorage.getItem("wogtractUsername") == null) {
+            localStorage.setItem("wogtractUsername", prompt("Enter Your Username"));
         }
 
         function getContractDiv() {
@@ -113,13 +114,14 @@
 
             // The accept button part of the contract div
             var acceptButton = document.createElement("button");
+            acceptButton.id = "acceptButton";
             acceptButton.onclick = (e) => {
                 // (TODO): Make a socket.io connection to update the contracts.json file.
-                if (localStorage.getItem("username") == CONTRACT_JSON.sender) {
+                if (localStorage.getItem("wogtractUsername") == CONTRACT_JSON.sender) {
                     console.log("sender");
                     CONTRACT_JSON.sAccepted = true;
                 }
-                else if (localStorage.getItem("username") == CONTRACT_JSON.receiver) {
+                else if (localStorage.getItem("wogtractUsername") == CONTRACT_JSON.receiver) {
                     console.log("receiver");
                     CONTRACT_JSON.rAccepted = true;
                 }
@@ -128,11 +130,19 @@
             acceptButton.innerText += "ACCEPT";
             el.append(acceptButton);
             
-            if (localStorage.getItem("username") == CONTRACT_JSON.sender && CONTRACT_JSON.sAccepted) {
-                acceptButton.disabled = true;
-            }
-            else if (localStorage.getItem("username") == CONTRACT_JSON.receiver && CONTRACT_JSON.rAccepted) {
-                acceptButton.disabled = true;
+            // if (localStorage.getItem("username") == CONTRACT_JSON.sender && CONTRACT_JSON.sAccepted) {
+            //     acceptButton.disabled = true;
+            // }
+            // else if (localStorage.getItem("username") == CONTRACT_JSON.receiver && CONTRACT_JSON.rAccepted) {
+            //     acceptButton.disabled = true;
+            // }
+
+            if (localStorage.getItem("wogtractUsername") == CONTRACT_JSON.sender && CONTRACT_JSON.sAccepted
+            ||  localStorage.getItem("wogtractUsername") == CONTRACT_JSON.receiver && CONTRACT_JSON.rAccepted)
+            {
+                setTimeout(() => {
+                    document.getElementById("acceptButton").disabled = true;
+                }, 150);
             }
 
             return el;
