Updated the To-Do List

--- a/views/newContract.ejs
+++ b/views/newContract.ejs
@@ -122,6 +122,7 @@
 
     <!-- (TODO): Create the div that allows the user to select what transacted item class they want to use in their contract for each item and they should be able to add an unlimited amount of transacted items to a single contract. -->
     <div id="newContractCreationDiv" style="width: 100%;" hidden>
+        <!-- (TODO): Create a form that takes in all the information regarding the contract. -->
         Yoooooooooooooo!
     </div>
 
